--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         margin: 30px auto;
         padding: 15px;
         line-height: 1.7;
+        text-align: center;
       "
     >
-      <p>1</p>
-      <p>2</p>
-      <p>3</p>
-      <p>4</p>
+      <p>在做辣</p>
+      <p>这就是个预览</p>
+      <p>用steam++可以稳定访问</p>
+      <p>话说访问不到也看不见这几句话</p>
     </div>
     <div
       style="
