--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
     </div>
     <div
       style="
+        background-color: aquamarine;
+        float: left;
+        height: 600px;
+        width: 50px;
+      "
+    >
+      <b>菜单</b><br />
+      没做<br />
+      第二个<br />
+      第三个<br />
+    </div>
+    <div
+      style="
         max-width: 700px;
         margin: 30px auto;
         padding: 15px;
@@ -42,7 +55,7 @@
       "
     >
       <p>我的网站</p>
-      <a href="www.bing.com/">友情链接</a>
+      <a href="www.baidu.com">友情链接（打不开的那种）</a>
     </div>
     <p></p>
   </body>
